# rag

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  AGENTS.asc  CHANGELOG.md  CLI_POLICY.asc  CLI_POLICY.md  CONTRIBUTING.asc  CONTRIBUTING.md  GITHUB_ACCESS.asc  LICENSE.asc  MANIFEST.in  QUICK_SETUP.asc  QUICK_SETUP.md  RAG_EXPLAINED.asc  README.asc  README.md  SECURITY.asc  SECURITY.md  SETUP.sh  SETUP_FIX.txt  SETUP_GUIDE.md  TRANSLATING.asc  TRANSLATING.md  commit_msg_config.py  knowledge_base.json  pyproject.toml  requirements-dev.txt  requirements.txt  sample_review.py  setup.cfg  setup.py  setup_rag.sh  signed.json  skill.asc
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: apple-silicon-workflow.yml  ci.yml  cla.yml  dependabot-analyzer.yml  docker.yml  e2e.yml  fix.yml  labeler.yml  lock-merged-prs.yml  pages.yml  release.yml  travis.yml
.harper/: README.md
book/: contributors.asc
container/: Dockerfile
docs/: security_checklist.md
release-webpage/: index-new.html  index.html
scripts/: build_macos_apps.sh  commit-msg.py  dmg_settings.py  enhance_changelog.py  lint.py  local_release.sh  run_e2e.sh  setup-apple-silicon.sh  setup_dev.sh  test.py  test_release.sh  update_webpage_version.py
src/rag/: __init__.py  __main__.py  __version__.py  config.py  data_fetcher.py  memory.py  rag_engine.py  review.py  tools.py
src/rag/ui/: minimal_tui.py  tui.py
tests/: test_cli.py  test_config.py  test_data_fetcher.py  test_memory.py  test_rag_engine.py  test_review.py  test_tools.py
tests/integration/: test_e2e.py
