[build-system]
requires = ["setuptools==68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variables = ["setup.py:version", "src/rag/__version__.py:__version__"]
commit_message = "chore(release): {version}"
branch = "main"
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib.*",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning", 
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]